migration fixes setup
